add all mapper